# storage/api-docs/api-docs.json
@@ -604,7 +604,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "passport": []
                     }
                 ]
             },
@@ -646,7 +646,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "passport": []
                     }
                 ]
             }
@@ -695,7 +695,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "passport": []
                     }
                 ]
             },
@@ -721,7 +721,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "passport": []
                     }
                 ]
             }
@@ -1163,10 +1163,6 @@
             "passport": {
                 "type": "http",
                 "bearerFormat": "JWT",
-                "scheme": "bearer"
-            },
-            "bearerAuth": {
-                "type": "http",
                 "scheme": "bearer"
             }
         }
